Need to set the add function

--- a/src/components/ContactList/contactlist.module.css
+++ b/src/components/ContactList/contactlist.module.css
@@ -1,8 +1,8 @@
-.contactList {
+.contactsList {
   width: 400px;
   padding-bottom: 20px;
 }
 
-.contactItem:not(:last-child) {
+.contactsItem:not(:last-child) {
   margin-bottom: 16px;
 }
